# OOP_NSU2024

BitArray/: CMakeLists.txt  How_To_Start
BitArray/src/: bitarray.cpp
BitArray/test/: bitarray_test.cpp
DZ2/: dz2.cpp
DZ3-5/: CMakeLists.txt  how_to_start.txt
DZ3-5/src/: time.cpp
DZ3-5/test/: time_test.cpp
DZ6/: dz6.1.cpp  dz6.2.cpp
DZ7/: 7.1.cpp  7.2.cpp
DZ8/: dz8.cpp
